--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 openxcap (1.2.0) unstable; urgency=low
 
+  [ Adrian Georgescu ]
   * Removed python-xml dependency
   * Use Account_test for running the test suite
   * Changed MySQL scripts doc field to mediumblob
@@ -14,7 +15,7 @@ openxcap (1.2.0) unstable; urgency=low
   * Made some error messages more clear
   * Deprecated port parameter, now port should be specified in root URI
   * Added icon application support
-  * Added 'public GET applications'. Public GET applications are not asked for
+  * Added 'public GET applications'. Public GET applications are not asked for 
     auth for GET requests, just for PUT
   * Fixed xcap-directory listing in SIPThor backend
   * Support for listing more than one document of the same type in xcap-directory
@@ -27,7 +28,22 @@ openxcap (1.2.0) unstable; urgency=low
   * Made presence rules use presence-rules.xsd schema
   * Added support for dialog-rules
 
- -- Adrian Georgescu <ag@ag-projects.com>  Sat, 17 Apr 2010 12:51:04 +0200
+  [ Saul Ibarra ]
+  * Fixed logging with latest python-application
+  * Remove python-xml dependency by taking sax package from PyXML project
+  * Changed default authentication type to digest
+  * Renamed watchers application to org.openxcap.watchers
+  * Fixed test suite for resource lists and rls services
+  * Bumped debian standards to version 3.8.4
+  * Restructured all appusages
+  * Updated maintainer and uploaders
+  * Refactored logging system and added more information
+  * Updated documentation and install files
+  * Log fatal error and exit when must-have settings are missing
+  * Clarified configuration sample comments
+  * Renamed dialog-rules to org.openxcap.dialog-rules
+
+ -- Saul Ibarra <saul@ag-projects.com>  Mon, 26 Apr 2010 08:46:56 +0200
 
 openxcap (1.1.3) unstable; urgency=low
 
