Raised version and updated changelog
Ignore-this: 53c5817f7b55e0b489b5d1a079ff4304

darcs-hash:20110607063638-56b4d-7781171d08e4c2b7d230212fd41a4c51d2c9c38a.gz

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+openxcap (2.0.1) unstable; urgency=low
+
+  * Added xcap-diff notification also for resource-lists and rls-services
+  * Added disabled_applications setting
+  * Use the local xml.xsd instead of importing the schema remotely
+  * Added missing XML declaration to xcap-directory schema
+  * Adapted to changes in python-application
+  * Bumped debian standards to version 3.9.2
+  * Reworked Debian packaging
+
+ -- Saul Ibarra <saul@ag-projects.com>  Tue, 07 Jun 2011 08:32:10 +0200
+
 openxcap (2.0.0) unstable; urgency=low
 
   * Added OMA XDM support for Buddy Lists Management
